# go-patterns

./: README.md  package.json
.github/workflows/: build-and-deploy.yml  lint.yml
frontend/: index.html  package.json
frontend/src/assets/icons/favicons/: site.webmanifest
rust/common/: Cargo.toml
rust/pack-games/: Cargo.toml
rust/pack-games/src/: find_duplicates.rs  load_sgfs.rs  main.rs
rust/wasm-search/: Cargo.toml
rust/wasm-search/src/: lib.rs
